fix: change to yarn

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,9 +3,9 @@ FROM node:alpine
 WORKDIR /usr/app
 
 COPY package.json .
-RUN npm install
+RUN yarn install
 
 # Not neccessary when docker compose file has volume defined that watches changes
 COPY . .
 
-CMD ["npm", "run", "start"]
+CMD ["yarn", "start"]
